statum-macros/tests/ui/invalid_transition_wrong_return.stderr
error: Invalid transition return type for `to_b`: expected return type like `Machine<NextState>` (optionally wrapped in `Option`/`Result`).

       Expected:
         fn to_b(self) -> Machine<NextState>

       Actual:
         u64
  --> tests/ui/invalid_transition_wrong_return.rs:14:5
   |
14 | /     fn to_b(self) -> u64 {
15 | |         1
16 | |     }
   | |_____^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_transition_wrong_return.rs:17:2
   |
17 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_transition_wrong_return.rs`
